updates styles to for alignment issues

--- a/styles.css
+++ b/styles.css
@@ -5,10 +5,8 @@
     flex-direction: column;
     max-width: 270px;
     height: 420px;
-    margin-left: auto;
-    margin-right: auto;
+    margin-inline: auto;
     border-radius: 10px;
-    margin-top: 75px;
 }
 
 
@@ -19,23 +17,27 @@
 }
 
 .container p {
-    font-size: 15px;
-    margin-left: 15px;
-    margin-right: 15px;
+    font-size: 0.938rem;
+    margin-left: 0.938rem;
+    margin-right: 0.938rem;
     text-align: center;
     color: hsl(220, 15%, 55%);
 }
 
 .container h1 {
-    font-size: 20px;
+    font-size: 1.25rem;
     font-weight: bold;
-    margin-left: 15px;
-    margin-right: 15px;
+    margin-left: 0.938rem;
+    margin-right: 0.938rem;
     text-align: center;
     color: hsl(218, 44%, 22%);
 }
 
 body {
     background-color: hsl(212, 45%, 89%);
-    height: 100%;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    margin: 0;
+    min-height: 100vh;
 }
